# frei

./: README.rst  environment.yml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/examples/: bezier.rst  install.rst
docs/frei/: index.rst  install.rst  opacities.rst
frei/: __init__.py  chemistry.py  core.py  interp.py  opacity.py  phoenix.py  plot.py  tp.py  twostream.py  twostream_np.py
frei/tests/: test_chemistry.py  test_core.py
licenses/: LICENSE.rst
notebooks/: demo_jax.ipynb  demo_jax_emission.ipynb
