[metadata]
name = frei
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/frei
description = Fast radiative transfer for exoplanet inference
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.5
setup_requires = setuptools_scm
install_requires =
    numpy


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    matplotlib

[tool:pytest]
testpaths = "frei" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  frei/__init*
  frei/conftest.py
  frei/*setup_package*
  frei/tests/*
  frei/*/tests/*
  frei/extern/*
  frei/version*
  */frei/__init*
  */frei/conftest.py
  */frei/*setup_package*
  */frei/tests/*
  */frei/*/tests/*
  */frei/extern/*
  */frei/version*
  .ipynb_checkpoints

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
